etc/docker/kubernetes/network-policy.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: dns-netpol
spec:
    podSelector:
        matchLabels:
            service: dns-svc
    ingress:
    -
        ports:
        -
            port: 30053
